<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/rpsTitle"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:layout_gravity="center_horizontal"
        android:textAlignment="center"
        android:textSize="32sp"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:text="@string/rock_paper_scissors">
    </TextView>

    <Button
        android:id="@+id/rpsResetButton"
        android:layout_width="300dp"
        android:layout_height="75dp"
        android:layout_gravity="center"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="15dp"
        android:backgroundTint="#495057"
        android:onClick="resetButton"
        android:text="@string/reset" />

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="120dp"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:onClick="rpsButtonSelected"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/rpsUserText"
            android:layout_width="110dp"
            android:layout_height="80dp"
            android:layout_marginTop="20dp"
            android:text="@string/user"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="32sp" />

        <TextView
            android:id="@+id/rpsScoreText"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginTop="20dp"
            android:text="@string/_0_0"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="32sp" />

        <TextView
            android:id="@+id/rpsCompText"
            android:layout_width="110dp"
            android:layout_height="80dp"
            android:layout_marginTop="20dp"
            android:text="@string/comp"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="32sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:layout_gravity="center">

        <TextView
            android:id="@+id/rpsUserSelection"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:textAlignment="textStart"
            android:textSize="24sp"
            android:text="@string/rock">
        </TextView>

        <TextView
            android:id="@+id/rpsCompSelection"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:textAlignment="textEnd"
            android:textSize="24sp"
            android:text="@string/paper">
        </TextView>
    </LinearLayout>

    <TextView
        android:id="@+id/rpsWonLostTieText"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:textSize="32sp"
        android:text="@string/won_lost_tie">
    </TextView>

    <LinearLayout
        android:layout_width="360dp"
        android:layout_height="120dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:layout_gravity="center">

        <ImageButton
            android:id="@+id/rpsRockImage"
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:layout_marginStart="4.95dp"
            android:layout_marginEnd="10dp"
            android:backgroundTint="@color/white"
            android:contentDescription="@string/todo"
            android:onClick="rpsButtonSelected"
            android:scaleType="fitCenter"
            android:src="@drawable/rock"
            android:tag="1" />

        <ImageButton
            android:id="@+id/rpsPaperImage"
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:layout_marginEnd="10dp"
            android:backgroundTint="@color/white"
            android:contentDescription="@string/todo"
            android:onClick="rpsButtonSelected"
            android:scaleType="fitCenter"
            android:src="@drawable/paper"
            android:tag="2" />

        <ImageButton
            android:id="@+id/rpsScissorImage"
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:backgroundTint="@color/white"
            android:contentDescription="@string/todo"
            android:onClick="rpsButtonSelected"
            android:scaleType="fitCenter"
            android:src="@drawable/scissors"
            android:tag="3" />
    </LinearLayout>

</LinearLayout>