<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/coinTitle"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:layout_gravity="center_horizontal"
        android:textAlignment="center"
        android:textSize="32sp"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:text="@string/coin_flip">
    </TextView>

    <ImageView
        android:id="@+id/coinFlipImage"
        android:layout_width="250dp"
        android:layout_height="250dp"
       android:layout_marginTop="30dp"
        android:layout_gravity="center"
        android:src="@drawable/heads"
        android:contentDescription="@string/todo">
    </ImageView>

    <Button
        android:id="@+id/coinFlipButton"
        android:layout_width="250dp"
        android:layout_height="80dp"
        android:layout_marginTop="30dp"
        android:layout_gravity="center"
        android:backgroundTint="#03071E"
        android:text="@string/flip">
    </Button>

</LinearLayout>